--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta name="description" content="SongFeels is an app that searchs for songs, analyzes the lyrics, to determine which emotion is conveyed most.">
+    <meta name="keywords" content="Song, Lyrics, Emotion, Analysis, Sentiment, Valence, Arousal, Dominance, VAD">
+    <meta name="author" content="Adam Weiler">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SongFeels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
