--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta charset="UTF-8">
     <meta name="description" content="SongFeels is an app that searchs for songs, analyzes the lyrics, to determine which emotion is conveyed most.">
     <meta name="keywords" content="Song, Lyrics, Emotion, Analysis, Sentiment, Valence, Arousal, Dominance, VAD">
     <meta name="author" content="Adam Weiler">
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">   
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <!--
-      manifest.json provides metadata used when your web app is installed on a
+      site.webmanifest provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" crossorigin="use-credentials">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>SongFeels</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -23,7 +28,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SongFeels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
